--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
-  text-align: center;
+  width: 80%;
+  position: absolute;
+  left: 5%;
+  top: 10%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.header > h3 {
+  line-height: 0;
+  position: relative;
+  top: 6px;
+  width: 100%;
+  color: #333;
 }
 
-.App-link {
-  color: #61dafb;
+.title-container {
+  text-align: justify;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.options-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+.option {
+  background-color: #efefef;
+  padding: 6px;
+  outline: none;
+  border-radius: 4px;
+  text-align: center;
+  border: solid 1px #333;
+}
+.option:hover {
+  cursor: pointer;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.next-btn {
+  outline: none;
+  border: solid 1px #333;
+  padding: 4px 18px;
+  border-radius: 4px;
+  color: black;
 }
